--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solana-intro-frontend",
+  "name": "oculus",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,7 +23,8 @@
     "next": "12.1.5",
     "react": "17.0.2",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-loading": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
