clean up code, add html element to image functionality, explore metaplex

--- a/package.json
+++ b/package.json
@@ -10,21 +10,36 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.9",
+    "@coral-xyz/anchor": "^0.29.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@metaplex-foundation/js": "^0.20.1",
+    "@metaplex-foundation/mpl-token-metadata": "^3.1.1",
+    "@metaplex-foundation/umi": "^0.8.10",
+    "@metaplex-foundation/umi-bundle-defaults": "^0.8.10",
+    "@metaplex-foundation/umi-signer-wallet-adapters": "^0.8.10",
+    "@metaplex-foundation/umi-uploader-aws": "^0.8.10",
+    "@metaplex-foundation/umi-uploader-irys": "^0.8.11",
     "@prisma/client": "^5.5.2",
+    "@shadow-drive/sdk": "^5.0.0",
     "@solana/wallet-adapter-base": "^0.9.5",
     "@solana/wallet-adapter-react": "^0.15.4",
     "@solana/wallet-adapter-react-ui": "^0.9.6",
     "@solana/wallet-adapter-wallets": "^0.15.5",
+    "assert": "^2.1.0",
     "chart.js": "^4.4.0",
+    "crypto-browserify": "^3.12.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^6.3.1",
+    "fs": "^0.0.1-security",
+    "html2canvas": "^1.4.1",
     "next": "12.1.5",
     "react": "17.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "17.0.2",
-    "react-loading": "^2.0.3"
+    "react-loading": "^2.0.3",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
