--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@coral-xyz/anchor": "^0.29.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/orbitron": "^5.0.17",
     "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.1.1",
     "@metaplex-foundation/umi": "^0.8.10",
