--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/orbitron": "^5.0.17",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.1.1",
     "@metaplex-foundation/umi": "^0.8.10",
