--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@metaplex-foundation/umi-uploader-aws": "^0.8.10",
     "@metaplex-foundation/umi-uploader-irys": "^0.8.11",
     "@prisma/client": "^5.5.2",
+    "@project-serum/anchor": "^0.26.0",
     "@shadow-drive/sdk": "^5.0.0",
     "@solana/wallet-adapter-base": "^0.9.5",
     "@solana/wallet-adapter-react": "^0.15.4",
