--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "next": "^14.0.1"
   },
   "devDependencies": {
