--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.6",
     "@solana/wallet-adapter-wallets": "^0.15.5",
     "assert": "^2.1.0",
+    "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "crypto-browserify": "^3.12.0",
     "date-fns": "^2.30.0",
@@ -38,6 +39,7 @@
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "next": "12.1.5",
+    "querystring": "^0.2.1",
     "react": "17.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "17.0.2",
