--- a/api/package.json
+++ b/api/package.json
@@ -10,13 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.7.0",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "next": "^14.0.1"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "prisma": "^5.5.2"
+    "prisma": "^5.7.0"
   }
 }
