--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "@project-serum/anchor": "^0.26.0",
+    "@shadow-drive/sdk": "^5.0.0",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
