--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "@shadow-drive/sdk": "^5.0.0",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
   },
